# LLM-Harness-for-iSH

./: LICENSE  README.md  install.sh  pyproject.toml  setup.py
src/harness/: __init__.py  __main__.py  agent.py  app.py  config.py  history.py  memory_store.py  providers.py  renderer.py  sessions.py  themes.py  tools.py
src/tools/custom_tools/ish-memory/: SKILL.md
src/tools/custom_tools/ish-memory/scripts/: memory_cli.py
tests/: test_harness.py  test_memory_cli.py  test_memory_integration.py  test_memory_store.py
